--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <header>
       <!-- Image sourced from www.rmit.edu.au for educational purposes only -->
-      <div><img src='../media/RMIT-Logo.png' alt='RMIT University logo' height=80 />Insert Your Name Here
+      <div><img src='media/RMIT-Logo.png' alt='RMIT University logo' height=80 />Vo An Huy
       </div>
     </header>
 
@@ -41,35 +41,35 @@
       <article id='about-me'>
         <h2>About me</h2>
         <p>
-          <img src='../media/avatar.png' width='200' alt='my photo' />
+          <img src='media/avatar.png' width='200' alt='my photo' />
         </p>
         <section id="more-about-me">
           <div>Who is your tutor / instructor</div>
-          <div></div>
+          <div>Mr. Long</div>
 
           <div>Who is your labber</div>
-          <div></div>
+          <div>Doan Nguyen My Hanh</div>
 
           <div>Have you any programming or web design experience?</div>
           <div>Yes I have. Well, I like to think so ...</div>
 
           <div>Do you see yourself as a programmer or designer, or both?</div>
-          <div>_</div>
+          <div>I see myself as a programmer.</div>
 
           <div>What has brought you to this course at RMIT?</div>
-          <div>_</div>
+          <div>This is a required course for the Information Technology major.</div>
 
           <div>What are you hoping to get out of the course?</div>
-          <div>_</div>
+          <div>I hope that I can get intermediate understanding of web programming.</div>
 
           <div>Assignments allow for individual or paried work. What strengths do you have and what strengths would you like your assignment partner to have?</div>
-          <div>_</div>
+          <div>I am a quick learner and passionate about Technology. I hope that my assignment partner is responsible and communicative.</div>
 
           <div>What websites do you use the most? (NB: "family friendly" !)</div>
-          <div>_</div>
+          <div>I visit Youtube and Reddit the most.</div>
 
           <div>Do you have any interests or hobbies?</div>
-          <div>_</div>
+          <div>I like video games and table tennis.</div>
         </section>
       </article>
       <aside>
@@ -78,7 +78,7 @@
     </main>
 
     <footer>
-      &copy; Insert your name here
+      &copy; Vo An Huy
       <script>
         document.write(new Date().getFullYear());
       </script>.
