--- a/Week 2/contact.html
+++ b/Week 2/contact.html
@@ -13,8 +13,7 @@
     <ul>
         <li>Fullname: Vo An Huy</li>
         <li>Student ID: s3804220</li>
-        <li>Email: s3804220@rmit.edu.vn/li>
-        <li>Phone: 090xxxxxxxx</li>
+        <li>Email: s3804220@rmit.edu.vn</li>
     </ul>
 </body>
 
