--- a/Week 2/index.html
+++ b/Week 2/index.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
 </head>
 
@@ -12,18 +11,18 @@
     <h1>Welcome to my homepage</h1>
     <h2>My info</h2>
     <div>I am a student studying WP</div>
-    <h2>My courses</h2>
+    <h2>My courses:</h2>
     <ol>
         <li>Web Programming</li>
-        <li>Practical Database Concept</li>
+        <li>Practical Database Concepts</li>
         <li>Software Engineering Fundamentals for IT</li>
     </ol>
-    <h2>My hobbies</h2>
+    <h2>My hobbies:</h2>
     <ul>
         <li>Video games</li>
         <li>Technology</li>
     </ul>
-    <a href="contact.html" target="_blank">Contact Me</a>
+    <a href="contact.html" target="_blank">Contact</a>
     <a href="album.html" target="_blank">Album</a>
 </body>
 
