--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <div>Mr. Long</div>
 
           <div>Who is your labber</div>
-          <div>Doan Nguyen My Hanh</div>
+          <div>Mr. Long</div>
 
           <div>Have you any programming or web design experience?</div>
           <div>Yes I have. Well, I like to think so ...</div>
