--- a/Week 2/index.html
+++ b/Week 2/index.html
@@ -22,8 +22,9 @@
         <li>Video games</li>
         <li>Technology</li>
     </ul>
-    <a href="contact.html" target="_blank">Contact</a>
-    <a href="album.html" target="_blank">Album</a>
+    <a href="contact.html" target="_blank">Contact</a><br>
+    <a href="https://www.rmit.edu.vn" target="_blank">RMIT Website</a><br>
+    <a href="photo.html" target="_blank">Album</a><br>
 </body>
 
 </html>
