--- a/Week 2/photo.html
+++ b/Week 2/photo.html
@@ -10,8 +10,8 @@
 
 <body>
     <h1>Photos</h1>
-    <img src="https://i-vnexpress.vnecdn.net/2019/10/15/Simon-9328-1571146652.jpg" alt="" width="200" height="200">
-    <img src="https://i-vnexpress.vnecdn.net/2019/10/15/DONG3531-JPG-7353-1571156376.jpg" alt="" width="200"
+    <img src="https://i-vnexpress.vnecdn.net/2020/03/16/1-1584345739-2627-1584345762_r_500x300.jpg" alt="" width="200" height="200">
+    <img src="https://i-thethao.vnecdn.net/2020/03/16/vleague1-1584339761-1584339773-1529-1584339782_r_140x84.jpg" alt="" width="200"
         height="200">
 </body>
 
