--- a/Week 2/index.html
+++ b/Week 2/index.html
@@ -24,7 +24,15 @@
     </ul>
     <a href="contact.html" target="_blank">Contact</a><br>
     <a href="https://www.rmit.edu.vn" target="_blank">RMIT Website</a><br>
-    <a href="photo.html" target="_blank">Album</a><br>
+    <div>
+        <a href="photo.html" target="_blank">Album</a>
+    </div>
+    <div>
+        <a href="friend.html" target="_blank"">Friend</a>
+    </div>
+    <div>
+        <a href="feedback.html" target="_blank">Feedback</a>
+    </div>
 </body>
 
 </html>
