--- a/Week 2/index.html
+++ b/Week 2/index.html
@@ -33,6 +33,9 @@
     <div>
         <a href="feedback.html" target="_blank">Feedback</a>
     </div>
+    <div>
+        <a href="multimedia.html" target="_blank">Multimedia</a>
+    </div>
 </body>
 
 </html>
