--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <article id='about-me'>
         <h2>About me</h2>
         <p>
-          <img src='media/avatar.png' width='200' alt='my photo' />
+          <img src='media/avatar.png' width='200' height="200" alt='my photo' />
         </p>
         <section id="more-about-me">
           <div>Who is your tutor / instructor</div>
@@ -72,9 +72,7 @@
           <div>I like video games and table tennis.</div>
         </section>
       </article>
-      <aside>
-        <div align='center'>Deprecated code sample.</div>
-      </aside>
+      
     </main>
 
     <footer>
