--- a/Week 4/bootstrap.html
+++ b/Week 4/bootstrap.html
@@ -35,14 +35,14 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <img src="https://www.w3schools.com/bootstrap4/la.jpg" alt="Los Angeles" width="1200px"
-                        height="400px">
+                        height="350px">
                 </div>
                 <div class="carousel-item">
                     <img src="https://www.w3schools.com/bootstrap4/chicago.jpg" alt="Chicago" width="1200px"
-                        height="400px">
+                        height="350px">
                 </div>
                 <div class="carousel-item">
-                    <img src="https://www.w3schools.com/bootstrap4/ny.jpg" alt="New York" width="1200px" height="400px">
+                    <img src="https://www.w3schools.com/bootstrap4/ny.jpg" alt="New York" width="1200px" height="350px">
                 </div>
             </div>
 
@@ -53,8 +53,7 @@
             <a class="carousel-control-next" href="#demo" data-slide="next">
                 <span class="carousel-control-next-icon"></span>
             </a>
-
-        </div>
+        </div><br>
 
         <div class="row">
             <!--First column-->
