--- a/a2/index.html
+++ b/a2/index.html
@@ -43,7 +43,7 @@
       <div>
         <ul class="navbar nav">
           <li class="nav-item">
-            <a class="nav-link" href="#Website Under Construction">About Us</a>
+            <a class="nav-link" href="#About-us">About Us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="">Prices</a>
@@ -56,7 +56,10 @@
     </nav>
 
     <main>
-      <article id='Website Under Construction'>
+      <article id='About-us'>
+        <h1 id="about-us-header">About Us</h1>
+        <p>Cinemax is a movie theatre that was established to serve local movie enthuasiasts. </p>
+        <p>Eventhough Cinemax was founded a long time ago, our facilites has recently been renovated to make the experience of movie going even more enjoyable.</p>
         <!-- Creative Commons image sourced from https://pixabay.com/en/maintenance-under-construction-2422173/ and used for educational purposes only -->
         <img src='../../media/website-under-construction.png' alt='Website Under Construction' />
       </article>
