--- a/a2/index.html
+++ b/a2/index.html
@@ -39,7 +39,7 @@
       </div>
     </header>
 
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark">
+    <nav class="navbar navbar-expand-sm bg-dark navbar-dark navbar-fixed-top">
       <div>
         <ul class="navbar nav">
           <li class="nav-item">
@@ -54,14 +54,60 @@
         </ul>
       </div>
     </nav>
+
     <br>
     <main>
       <article id='About-us'>
         <h1 id="about-us-header">About Us</h1>
+
         <p>Cinemax is a movie theatre that was established to serve local movie enthuasiasts. </p>
-        <p>Eventhough Cinemax was founded a long time ago, our facilites has recently been renovated to make the experience of movie going even more enjoyable.</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo aut nulla, cumque repellendus aperiam non saepe doloribus quod id quis provident enim sed perferendis eligendi illum voluptate cupiditate, exercitationem corrupti est iure nobis repudiandae hic sapiente aliquid. Perspiciatis temporibus illum sed sequi? Quia, ad? Voluptatum qui doloremque quis cum et, cumque voluptatem nobis magnam recusandae. Tenetur quis sint quas animi provident vero, porro sed doloribus. Voluptatem soluta nihil impedit unde? Eligendi non possimus maxime itaque, voluptatum quae nesciunt expedita reprehenderit earum numquam aperiam facere ad obcaecati. Accusamus, veritatis dignissimos. Hic maxime ratione porro! Ex repellendus totam, placeat similique voluptate quod facilis culpa id et minima consequatur veniam excepturi ea. Ratione porro ipsa minima non magnam vero hic iure molestiae illum aliquam repellat perferendis ex maiores est beatae delectus in commodi quae, cupiditate optio sunt soluta consequatur error sed. Voluptatem delectus rem praesentium iste, natus eaque expedita assumenda modi atque? Doloremque!</p>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo aut nulla, cumque repellendus aperiam non saepe doloribus quod id quis provident enim sed perferendis eligendi illum voluptate cupiditate, exercitationem corrupti est iure nobis repudiandae hic sapiente aliquid. Perspiciatis temporibus illum sed sequi? Quia, ad? Voluptatum qui doloremque quis cum et, cumque voluptatem nobis magnam recusandae. Tenetur quis sint quas animi provident vero, porro sed doloribus. Voluptatem soluta nihil impedit unde? Eligendi non possimus maxime itaque, voluptatum quae nesciunt expedita reprehenderit earum numquam aperiam facere ad obcaecati. Accusamus, veritatis dignissimos. Hic maxime ratione porro! Ex repellendus totam, placeat similique voluptate quod facilis culpa id et minima consequatur veniam excepturi ea. Ratione porro ipsa minima non magnam vero hic iure molestiae illum aliquam repellat perferendis ex maiores est beatae delectus in commodi quae, cupiditate optio sunt soluta consequatur error sed. Voluptatem delectus rem praesentium iste, natus eaque expedita assumenda modi atque? Doloremque!</p>
+        <p>Eventhough Cinemax was founded a long time ago, our facilites has recently been renovated to make the
+          experience of movie going even more enjoyable.</p>
+
+        <h3>More comfortable seating for a better movie viewing experience</h3>
+
+        <p>Our goal is for you to have an immersive movie experience, with that in mind, we would like to introduce you
+          to our newly equipped seats with better cushioning system. We acknowledge that movies' durations can be
+          extensive, these newly upgraded seats will ensure your comfortability and prevent lumbar and back pain. </p>
+        <br>
+        <hr style="border: white solid 1px;">
+        <br>
+        <div class="row">
+          <div class="col-md-4">
+            <img
+              src="https://www.profurn.com.au/static/uploads/images/paragon-760-cup-7-grey-wfqrrrxrcizz.jpg?mode=max&upscale=false&width=255"
+              alt="standard-seat">
+          </div>
+          <div class="col-md-8">
+            <h4>Standard Seating</h4>
+            <p>Our new standard seats will now come with cupholders so you will never have to worry out spilling your
+              drinks ever again. This seat is mad with high quality faux leather to bring you an enjoyable movie
+              exprience.</p>
+          </div>
+        </div>
+        <br><br><br><br><br><br><br><br><br><br><br>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo aut nulla, cumque repellendus aperiam non
+          saepe doloribus quod id quis provident enim sed perferendis eligendi illum voluptate cupiditate,
+          exercitationem corrupti est iure nobis repudiandae hic sapiente aliquid. Perspiciatis temporibus illum sed
+          sequi? Quia, ad? Voluptatum qui doloremque quis cum et, cumque voluptatem nobis magnam recusandae. Tenetur
+          quis sint quas animi provident vero, porro sed doloribus. Voluptatem soluta nihil impedit unde? Eligendi non
+          possimus maxime itaque, voluptatum quae nesciunt expedita reprehenderit earum numquam aperiam facere ad
+          obcaecati. Accusamus, veritatis dignissimos. Hic maxime ratione porro! Ex repellendus totam, placeat similique
+          voluptate quod facilis culpa id et minima consequatur veniam excepturi ea. Ratione porro ipsa minima non
+          magnam vero hic iure molestiae illum aliquam repellat perferendis ex maiores est beatae delectus in commodi
+          quae, cupiditate optio sunt soluta consequatur error sed. Voluptatem delectus rem praesentium iste, natus
+          eaque expedita assumenda modi atque? Doloremque!</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo aut nulla, cumque repellendus aperiam non
+          saepe doloribus quod id quis provident enim sed perferendis eligendi illum voluptate cupiditate,
+          exercitationem corrupti est iure nobis repudiandae hic sapiente aliquid. Perspiciatis temporibus illum sed
+          sequi? Quia, ad? Voluptatum qui doloremque quis cum et, cumque voluptatem nobis magnam recusandae. Tenetur
+          quis sint quas animi provident vero, porro sed doloribus. Voluptatem soluta nihil impedit unde? Eligendi non
+          possimus maxime itaque, voluptatum quae nesciunt expedita reprehenderit earum numquam aperiam facere ad
+          obcaecati. Accusamus, veritatis dignissimos. Hic maxime ratione porro! Ex repellendus totam, placeat similique
+          voluptate quod facilis culpa id et minima consequatur veniam excepturi ea. Ratione porro ipsa minima non
+          magnam vero hic iure molestiae illum aliquam repellat perferendis ex maiores est beatae delectus in commodi
+          quae, cupiditate optio sunt soluta consequatur error sed. Voluptatem delectus rem praesentium iste, natus
+          eaque expedita assumenda modi atque? Doloremque!</p>
         <!-- Creative Commons image sourced from https://pixabay.com/en/maintenance-under-construction-2422173/ and used for educational purposes only -->
         <img src='../../media/website-under-construction.png' alt='Website Under Construction' />
       </article>
