--- a/a2/index.html
+++ b/a2/index.html
@@ -63,8 +63,9 @@
         <p>Cinemax is a movie theatre that was established to serve local movie enthuasiasts. </p>
         <p>Eventhough Cinemax was founded a long time ago, our facilites has recently been renovated to make the
           experience of movie going even more enjoyable.</p>
+        <br>
 
-        <h3>More comfortable seating for a better movie viewing experience</h3>
+        <h3>More comfortable seats</h3>
 
         <p>Our goal is for you to have an immersive movie experience, with that in mind, we would like to introduce you
           to our newly equipped seats with better cushioning system. We acknowledge that movies' durations can be
