added seating info

--- a/a2/index.html
+++ b/a2/index.html
@@ -55,6 +55,7 @@
         <p>Eventhough Cinemax was founded a long time ago, our facilites has recently been renovated to make the
           experience of movie going even more enjoyable.</p>
         <br>
+        <hr style="border: white solid 1px;">
 
         <h3>More comfortable seats</h3>
 
@@ -62,33 +63,41 @@
           to our newly equipped seats with better cushioning system. We acknowledge that movies' durations can be
           extensive, these newly upgraded seats will ensure your comfortability and prevent lumbar and back pain. </p>
         <br>
-        <hr style="border: white solid 1px;">
+
         <br>
         <div class="row">
           <div class="col-md-4">
-            <img
-              src="https://www.profurn.com.au/static/uploads/images/paragon-760-cup-7-grey-wfqrrrxrcizz.jpg?mode=max&upscale=false&width=255"
-              alt="standard-seat">
+            <img src="media/standard-seat.jpg" alt="standard-seat" class="seat-img">
           </div>
-          <div class="col-md-8">
-            <h4>Standard Seating</h4>
+          <div class="col-md-8 seat-info">
+            <h5>Standard Seating</h5>
             <p>Our new standard seats will now come with cupholders so you will never have to worry out spilling your
-              drinks ever again. This seat is mad with high quality faux leather to bring you an enjoyable movie
+              drinks ever again. Our new standard seats will now come with more padding than ever before. Not only that, the seat
+              cover is made with high quality faux leather to bring you an enjoyable movie
               exprience.</p>
           </div>
         </div>
-        <br><br><br><br><br><br><br><br><br><br><br>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo aut nulla, cumque repellendus aperiam non
-          saepe doloribus quod id quis provident enim sed perferendis eligendi illum voluptate cupiditate,
-          exercitationem corrupti est iure nobis repudiandae hic sapiente aliquid. Perspiciatis temporibus illum sed
-          sequi? Quia, ad? Voluptatum qui doloremque quis cum et, cumque voluptatem nobis magnam recusandae. Tenetur
-          quis sint quas animi provident vero, porro sed doloribus. Voluptatem soluta nihil impedit unde? Eligendi non
-          possimus maxime itaque, voluptatum quae nesciunt expedita reprehenderit earum numquam aperiam facere ad
-          obcaecati. Accusamus, veritatis dignissimos. Hic maxime ratione porro! Ex repellendus totam, placeat similique
-          voluptate quod facilis culpa id et minima consequatur veniam excepturi ea. Ratione porro ipsa minima non
-          magnam vero hic iure molestiae illum aliquam repellat perferendis ex maiores est beatae delectus in commodi
-          quae, cupiditate optio sunt soluta consequatur error sed. Voluptatem delectus rem praesentium iste, natus
-          eaque expedita assumenda modi atque? Doloremque!</p>
+        <br><br>
+
+        <div class="row">
+          <div class="col-md-4">
+            <img src="media/first-class-seat.jpg" alt="first-class-seat" class="seat-img">
+          </div>
+          <div class="col-md-8 seat-info">
+            <div class="seat-content">
+              <h5>First Class Seating</h5>
+              <p>For those who craves a more luxurious movie experience, we have updated our first class furnitures.
+                Which
+                includes real leather covers, reclinable seats for a more comfortable sitting position to retractable
+                tables to store all your needs. Never will you miss "the good part" of the movie from reaching down your
+                seat to grab your popcorn again.</p>
+            </div>
+          </div>
+
+        </div>
+        <br>
+        <hr style="border: white solid 1px;">
+        <h3>Cutting edge projection and sound system</h3>
         <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illo aut nulla, cumque repellendus aperiam non
           saepe doloribus quod id quis provident enim sed perferendis eligendi illum voluptate cupiditate,
           exercitationem corrupti est iure nobis repudiandae hic sapiente aliquid. Perspiciatis temporibus illum sed
